# willsofwords

./: .dockerignore  .env  .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose.yaml  pyproject.toml  qodana.yaml  requirements-dev.txt  requirements.txt  testbook.json  testbook2.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black_flake8.yaml  black_flake8_bandit.yaml  docker_build_push.yaml  pytest.yaml  qodana_code_quality.yaml  qodana_code_quality.yml
backend/: __init__.py  __main__.py  api.py  commands.py  llm.py
backend/assets/: profanity.txt  profanity.txt.dist
backend/defaults/: project_settings.json.dist
backend/models/: __init__.py  aiagent.py  book_data.py  cell.py  config.py  enums.py  grid_size.py  profanity.py  project_config.py  projects.py  puzzle.py  puzzle_data.py  wordlist.py
backend/pages/: __init__.py  contents.py  pages.py  print_params.py  sub_contents.py
backend/routers/: __init__.py  command_router.py  project_router.py  projects_router.py  settings_router.py
backend/routers/project_routes/: __init__.py  command_router.py  project_manuscript.py  project_puzzledata.py  project_router.py  project_settings.py  project_wordlist.py
backend/routers/settings_routes/: app_config_router.py  proafanity_router.py  project_defaults_router.py
backend/tests/: test_utils.py
backend/tests/models/: test_cell.py  test_grid_size.py  test_wordlist.py
backend/tests/pages/: test_sub_contents.py
backend/utils/: __init__.py  config.py  logging.py
demo_data/: Scotland WordSearch Topics and Wordlists.txt
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/audio/: curses.m4a
frontend/src/: App.vue  index.html  main.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: ButtonBox.vue  CalloutBox.vue  DividerLine.vue  GridTile.vue  HeadingBlock.vue  Icon.vue  InputBlock.vue  LoadingSpinner.vue  NavBar.vue  NavButton.vue  NavIcon.vue  ProfanityTile.vue  ProjectFile.vue  PuzzleBlock.vue  PuzzleGrid.vue  TextBlock.vue  TitleBar.vue  WordTile.vue  WordlistCategory.vue
frontend/src/router/: index.ts
frontend/src/types/: types.ts
frontend/src/views/: About.vue  AboutView.vue  CreateProjectView.vue  CreateWordlistView.vue  NotFound.vue  NotFoundView.vue  PrintDefaults.vue  PrintDefaultsView.vue  ProfanityView.vue  ProjectDefaultsView.vue  ProjectSettingsView.vue  ProjectView.vue  ProjectsView.vue  PuzzleView.vue  Settings.vue  SettingsView.vue  WordlistView.vue
infra/: backend.Dockerfile  docker-compose-dev.yaml  docker_build_push.sh  frontend.Dockerfile
src/: __main__.py
src/assets/: merge_profane.py  profanity.txt
src/models/: __init__.py  board.py  book_data.py  cell.py  config.py  direction.py  enums.py  grid_size.py  puzzle.py  utils.py  wordlist.py
src/pages/: contents.py  pages.py  print_params.py  sub_contents.py
src/utils/: __init__.py  logging.py
