[project]
name = "wills_of_words"
description = "a word serach puzzle creation tool"
version = "0.0.1"
dependencies = [
    "numpy>2.3.4",
    "ollama>=0.6.1",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pillow>=12.0.0"
]
requires-python = ">=3.12"
readme = ".github/README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "flake8>=7.3.0",
    "mock>=5.2.0",
    "pip-tools>=7.5.2",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-md>=0.2.0",
    "pytest-emoji>=0.2.0",
    "bandit>=1.9.2"
]

[tool.black]
line-length = 127
target-version = ["py312"]

[tool.bandit]
skips = ["B311"]
exclude_dirs = ["tests"]


[tool.pytest]
minversion = "9.0.0"
testpaths = ["./backend"]
log_level = "DEBUG"
mock_use_standalone_module = "true"
addopts = ["--cov", "--cov-report", "term", "--cov-report", "html", "--cov-report","xml", "--cov-report","json","--cov-report","lcov"]

[tool.coverage.run]
data_file = ".cov/.coverage"
source = ["./backend"]
omit = ["test_*"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.html]
directory = ".cov/coverage_html_report"

[tool.coverage.xml]
output = ".cov/coverage.xml"

[tool.coverage.json]
output = ".cov/coverage.json"
pretty_print = true

[tool.coverage.lcov]
output = ".cov/coverage.lcov"